--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">Sopt-Seminar</string>
+    <string name="app_name">SOPT</string>
+    <string name="test_text">스크롤 테스트 내려주세요 스크롤 테스트</string>
+    <string name="id_text">아이디</string>
+    <string name="id_hint">아이디를 입력해주세요.</string>
+    <string name="password_text">비밀번호</string>
+    <string name="password_hint">비밀번호를 입력해주세요.</string>
+    <string name="name_text">이름</string>
+    <string name="name_hint">이름을 입력해주세요.</string>
+    <string name="login_text">로그인</string>
+    <string name="sign_up_text">회원가입</string>
+    <string name="sign_up_finish_text">회원가입 완료</string>
+
+    <string name="empty_name_msg">이름을 입력해주세요</string>
+    <string name="empty_id_msg">아이디를 입력해주세요</string>
+    <string name="empty_password_msg">비밀번호를 입력해주세요</string>
+    <string name="invalid_id_msg">유효한 아이디를 입력해주세요</string>
+    <string name="invalid_password_msg">유효한 비밀번호를 입력해주세요</string>
+    <string name="invalid_name_msg">유효한 이름을 입력해주세요</string>
 </resources>
