--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,10 @@
     <string name="home_repository_btn">Repository</string>
 
     <string name="null_des">null</string>
+
+    <string name="profile_menu_text">Profile</string>
+    <string name="home_menu_text">Home</string>
+    <string name="camera_menu_text">Camera</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
