--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,10 @@
     <string name="profile_menu_text">Profile</string>
     <string name="home_menu_text">Home</string>
     <string name="camera_menu_text">Camera</string>
+
+    <string name="github_tv">Github</string>
+    <string name="wait_tv">준비중입니다</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
