[CHORE] Apply <string-array>
<string-array> 적용

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="tab_layout_items">
+        <item>팔로잉</item>
+        <item>팔로워</item>
+    </string-array>
 </resources>
