--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="github_tv">Github</string>
     <string name="wait_tv">준비중입니다</string>
 
+    <string name="camera_tv">사진을 첨부해주세요</string>
+    <string name="camera_btn">첨부하기</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
