--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,8 @@
     <string name="camera_tv">사진을 첨부해주세요</string>
     <string name="camera_btn">첨부하기</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="setting_auto_login">자동로그인 해제</string>
+    <string name="setting_auto_tb">환경설정</string>
 
     <string-array name="tab_layout_items">
         <item>팔로잉</item>
