--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="login_text">로그인</string>
     <string name="sign_up_text">회원가입</string>
     <string name="sign_up_finish_text">회원가입 완료</string>
+    <string name="sign_in_auto_login">자동 로그인</string>
 
     <string name="empty_name_msg">이름을 입력해주세요</string>
     <string name="empty_id_msg">아이디를 입력해주세요</string>
